feat: metric card & mini UI update